--- a/tema 4 CSS/4.2/indexx.css
+++ b/tema 4 CSS/4.2/indexx.css
@@ -34,6 +34,6 @@
               
               .footer {
                 border:rgb(28, 179, 8) solid 1px;
-        float: none;
+        clear:both;
                         }
                     
