--- a/tema site/_header.scss
+++ b/tema site/_header.scss
@@ -1,6 +1,7 @@
 
 header{
-    background-image: url(banner.jpg);
+    background-image: url(banner.jpg) ;
+    background-position: center;
     padding:40px;
     color:white;
     position:sticky;
