--- a/tema site/_button.scss
+++ b/tema site/_button.scss
@@ -1,5 +1,5 @@
 .button{
-    background-color: blue;
+    background-color: rgb(47, 125, 199);
     color:white;
     padding: 10px;
     width: 100px;
